--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 	padding: 0;
 }
 
+/*WRAPPER*/
 #wrapper{
 	position: relative;
 	height: 0px;
@@ -10,18 +11,23 @@
 	width: 960px;
 }
 
+/*HEADER*/
 #header{
 	height:100px;
 	width: 100%;
-	background.color: white;
+	background-color: black;
 	overflow-x: hidden;
+	animation-name: headeranimate;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
 }
 
+/*LOGO*/
 .logo{
 	height:100px;
 	width:30%;
 	float: left;
-	background-color: teal;
+	background-color: black;
 }
 
 .logo h1{
@@ -30,8 +36,14 @@
 	font-family: 'Georgia';
 	font-size: 1.9em;
 	color: white;
+	animation-name: colorchange;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
 }
 
+
+
+/*NAV*/
 .nav{
 	height:10px;
 	width: 30%;
@@ -44,7 +56,7 @@
 
 .nav a{
 	font-family: "Arial";
-	color: black;
+	color: white;
 	padding-left: 15px;
 	padding-right: 15px;
 	text-align: center;
@@ -54,7 +66,7 @@
 
 .nav p{
 	font-family: "Arial";
-	color: black;
+	color: white;
 	padding-left: 15px;
 	padding-right: 15px;
 	text-align: center;
@@ -77,17 +89,18 @@
 	transition: 0.1s all ease-in;
 }
 
+/*MAIN CONTENT AREA*/
 #content{
 	padding: 0px 0px 40px 0px;
-	background-image: url("../images/dimension.png");
+	background-image: url("../images/bganimate.gif");
 	background-repeat: repeat;
 	overflow-y: auto;
-
+	overflow-x: hidden;
 }
 
 .main{
 	display: flex;
-	flex-flow: column;
+	flex-direction: column;
 	min-height: 300px;
 	width: 650px;
 	margin: 50px 5px 50px 0px;
@@ -105,6 +118,9 @@
 	padding: 20px;
 	margin: 0 20px 0 20px;
 	border-bottom: 2px solid #dddddd;
+	animation-name: colorchange;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
 }
 
 .main p{
@@ -115,6 +131,7 @@
 	margin: 0 20px 0 20px;
 }
 
+/*CONTACT PAGE ELEMENTS*/
 input.name{
 	width: 550px;
 	height: 20px;
@@ -149,8 +166,18 @@ button{
 	position: relative;
 	color: white;
 	font-size: 0.9em;
+	animation-name: headeranimate;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
 }
 
+/*PROFILE IMAGE*/
+img.prof{
+	margin: 30px 30px 30px 40px;
+	float: left;
+}
+
+/*PORTFOLIO IMAGES*/
 .main img{
 	display: inline-block;
 }
@@ -173,6 +200,10 @@ div.rec{
 	background: teal;
 	position: relative;
 	top: -75px;
+	margin-bottom: -50px;
+	animation-name: headeranimate;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
 
 }
 
@@ -184,6 +215,7 @@ h2.pf{
 	text-align: center;
 }
 
+/*SIDEBAR*/
 .sidebar{
 	width: 270px;
 	margin: 50px 0px 5px 5px;
@@ -201,22 +233,29 @@ h2.pf{
 	padding: 20px;
 	margin: 0 10px 0 10px;
 	border-bottom: 2px solid #dddddd;
+	animation-name: colorchange;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
 }
 
 .sidebar img{
 	padding-left: 20px;
 	padding-top: 30px;
-
 }
 
+/*FOOTER*/
 .footer{
 	height: 100px;
+	left: 0; right: 0; bottom: 0;
 	border-top: 10px solid teal;
 	background-color: grey;
 	width: 100%;
 	overflow-x: hidden;
 	text-align: center;
 	padding-top: 30px;
+	animation-name: headeranimate;
+	animation-duration: 5s;
+	animation-iteration-count: infinite;
 }
 
 .footer a{
@@ -224,3 +263,20 @@ h2.pf{
 	font-family: "Arial";
 }
 
+@keyframes headeranimate{
+	0%{ background-color: #9BC995; }
+	20%{ background-color: #98B9AB; }
+	40%{ background-color: #5171A5; }
+	60%{ background-color: #3F3047; }
+	80%{ background-color: #FF5154; }
+	100%{ background-color: #91CB3E; }
+}
+
+@keyframes colorchange{
+	0%{ color: #91A6FF; }
+	20%{ color: #FF88DC; }
+	40%{ color: #FAFF7F; }
+	60%{ color: #79B23E; }
+	80%{ color: #FF5154; }
+	100%{ color: #4ECDC4; }
+}
