--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Crimson+Text|Special+Elite|Nunito|Work+Sans|Montserrat');
+
 *{
 	margin: 0;
 	padding: 0;
@@ -33,7 +35,7 @@
 .logo h1{
 	text-align: center;
 	padding-top: 33px;
-	font-family: 'Georgia';
+	font-family: "Montserrat";
 	font-size: 1.9em;
 	color: white;
 	animation-name: colorchange;
@@ -55,7 +57,7 @@
 }
 
 .nav a{
-	font-family: "Arial";
+	font-family: "Montserrat";
 	color: white;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -65,7 +67,7 @@
 }
 
 .nav p{
-	font-family: "Arial";
+	font-family: "Montserrat";
 	color: white;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -112,7 +114,7 @@
 }
 
 .main h1{
-	font-family: "Georgia", Serif;
+	font-family: "Montserrat";
 	color: teal;
 	font-size: 1.8em;
 	padding: 20px;
@@ -124,10 +126,11 @@
 }
 
 .main p{
-	font-family: "Helvetica";
+	font-family: "Crimson Text";
 	color: #777777;
 	padding-top: 20px;
 	padding-left: 20px;
+	padding-right: 20px;
 	margin: 0 20px 0 20px;
 }
 
@@ -208,7 +211,7 @@ div.rec{
 }
 
 h2.pf{
-	font-family: "Georgia";
+	font-family: "Montserrat";
 	font-size: 1.2em;
 	color: white;
 	padding: 15px;
@@ -227,7 +230,7 @@ h2.pf{
 }
 
 .sidebar h1{
-	font-family: "Georgia", Serif;
+	font-family: "Montserrat";
 	color: teal;
 	font-size: 1.5em;
 	padding: 20px;
@@ -243,11 +246,15 @@ h2.pf{
 	padding-top: 30px;
 }
 
+.main input, textarea, button{
+	font-family: "Special Elite";
+}
+
 /*FOOTER*/
 .footer{
 	height: 100px;
 	left: 0; right: 0; bottom: 0;
-	border-top: 10px solid teal;
+	border-top: 10px solid white;
 	background-color: grey;
 	width: 100%;
 	overflow-x: hidden;
@@ -260,7 +267,7 @@ h2.pf{
 
 .footer a{
 	color: white;
-	font-family: "Arial";
+	font-family: "Crimson Text";
 }
 
 @keyframes headeranimate{
